# opencl-raytracing

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh  env.sh  kernel.cl  main.cpp  opencl-raytracing  render_tiles.py  transforms.cpp  transforms.h  vec3.cpp  vec3.h
cl/: accel.cl  camera.cl  geometry.cl  kernel.cl  kernel.pocl  lights.cl  materials.cl  sampling.cl  utils.cl
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  tui.rs
crates/embree4/: Cargo.toml
crates/embree4-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/embree4-sys/src/: bvh.rs  device.rs  lib.rs
crates/embree4/src/: bvh.rs  device.rs  lib.rs
crates/raytracing/: Cargo.toml  build.rs
crates/raytracing-cl/: Cargo.toml
crates/raytracing-cl/cl/: accel.cl  lights.cl
crates/raytracing-cl/src/: lib.rs
crates/raytracing-cpu/: Cargo.toml
crates/raytracing-cpu/examples/: cpu.rs
crates/raytracing-cpu/src/: accel.rs  aov.rs  geometry.rs  lib.rs  lights.rs  main.rs  materials.rs  ray.rs  sample.rs  scene.rs  tests.rs  texture.rs  utils.rs
crates/raytracing-optix/: Cargo.toml  build.rs  wrapper.h
crates/raytracing-optix/csrc/: CMakeLists.txt  lib.cu  lib.h  lib_api.h  lib_optix_types.h  lib_types.h  librt.h  params.h  pipeline.cu  pipeline.h  sbt.h  sbt_host.cu  sbt_host.h  scene.cu  scene.h  shared_lib.h  test.cpp  test1.cu  util.h
crates/raytracing-optix/csrc/CMake/: DownloadMathDx2512.cmake  DownloadOptiX91.cmake  FindMathDx2512.cmake  FindOptiX90.cmake  FindOptiX91.cmake
crates/raytracing-optix/csrc/common/: kernel_params.h  kernel_params.hpp  sbt.h  sbt.hpp  types.h
crates/raytracing-optix/csrc/host/: data.md  lib.cu  lib_api.h  lib_optix_types.h  optix_function_table.cu  pipeline.cu  pipeline.h  pipeline.hpp  sbt_host.cu  sbt_host.h  sbt_host.hpp  scene.cu  scene.h  scene.hpp  texture.cu  texture.h
crates/raytracing-optix/csrc/kernels/: .gitignore  Makefile  accel.h  accel.hpp  aov.cu  aov.h  aov.hpp  camera.h  camera.hpp  geometry.h  geometry.hpp  hash.h  hash.hpp  kernel_math.h  kernel_math.hpp  kernel_sbt.h  kernel_types.h  kernel_types.hpp  lights.h  lights.hpp  materials.h  materials.hpp  normals.cu  pathtracer.cu  pathtracer.h  pathtracer.hpp  sample.h  sample.hpp  texture.h  texture.hpp
crates/raytracing-optix/examples/: optix.rs
crates/raytracing-optix/kernels/: Makefile  camera.h  hash.h  kernel_math.h  kernel_types.h  lib_types.h  normals.cu  params.cuh  params.h  pathtracer.cu  sample.h
crates/raytracing-optix/src/: lib.rs  optix.rs  sbt.rs  scene.rs
crates/raytracing/cl/: kernel.cl  kernel.pocl
crates/raytracing/src/: backends.rs  cli.rs  lib.rs  macros.rs  main.rs
crates/raytracing/src/accel/: bvh2.rs  mod.rs
crates/raytracing/src/geometry/: aabb.rs  complex.rs  matrix4x4.rs  mesh.rs  mod.rs  quaternion.rs  transform.rs  vec2.rs  vec3.rs  vec4.rs
crates/raytracing/src/geometry/shapes/: mesh.rs  mod.rs
crates/raytracing/src/lights/: light.rs  mod.rs
crates/raytracing/src/materials/: image.rs  mod.rs  texture.rs
crates/raytracing/src/renderer/: mod.rs
crates/raytracing/src/sampling/: mod.rs
crates/raytracing/src/scene/: camera.rs  mod.rs  pbrt.rs  primitive.rs  scene.rs
crates/raytracing/src/scene/test_scenes/: mod.rs
crates/raytracing/src/scene/test_scenes/assets/: bunny.ply
crates/raytracing/src/settings/: aovs.rs  mod.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: demo_view.rs  main.rs  render_output.wgsl  render_output_render.wgsl  render_output_view.rs  scene_view.rs
crates/viewer/src/shaders/: render_output_compute.wgsl  wireframe.wgsl
crates/visual-testing/: .gitignore  Cargo.toml  README.md  pyproject.toml
crates/visual-testing/src/: main.rs
crates/visual-testing/src/rttest/: main.py  runner.py  test_spec.py
crates/visual-testing/tests/: tests.toml
crates/xtask/: Cargo.toml  README.md
crates/xtask/src/: bundle.rs  main.rs
embree/: .gitignore
kernels/: kernel.cl
libs/embree4-sys/: Cargo.toml  build.rs
libs/embree4-sys/src/: bvh.rs
output/: out.ppm
scenes/: .gitignore  cb.glb  cb_texture.glb  cbbunny.blend  cbbunny.glb  cbbunny_area_light.blend  cbbunny_area_light.blend1  cbbunny_area_light.glb  cbbunny_area_light_transforms.glb  checker.glb  test.blend  test.glb  test.pbrt
src/: main.rs
src/accel/: bvh2.rs  mod.rs
src/geometry/: aabb.rs  matrix4x4.rs  mesh.rs  mod.rs  transform.rs  vec3.rs
src/lights/: light.rs
src/scene/: camera.rs  mod.rs  scene.rs
visual-testing/: README.md
visual-testing/src/rttest/: bless.py  diff.py  main.py  perf.py  runner.py  test_spec.py
visual-testing/tests/: tests.toml
