[workspace]
resolver = "3"

members = [ 
    "crates/embree4",
    "crates/embree4-sys",
    
    "crates/raytracing", 
    
    "crates/raytracing-cl", 
    "crates/raytracing-cpu", 
    
    "crates/viewer"
]

[workspace.dependencies]
# error-handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# standard crates
rand = "0.9.2"
num = "0.4.3"

# image handling
image = "0.25.8"

# workspace members
embree4 = { path = "crates/embree4" }
embree4-sys = { path = "crates/embree4-sys" }

raytracing = { path = "crates/raytracing" }

raytracing-cl = { path = "crates/raytracing-cl" }
raytracing-cpu = { path = "crates/raytracing-cpu" }

viewer = { path = "crates/viewer" }