[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }

raytracing = { workspace = true }
raytracing-cpu = { workspace = true }
raytracing-optix = { workspace = true, optional = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { version = "4.5.39", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
optix = ["dep:raytracing-optix"]