[package]
name = "raytracing-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }

embree4 = { workspace = true }
raytracing = { workspace = true }

png = "0.17.16"

[dev-dependencies]
clap = { version = "4.5.39", features = ["derive"] }
tracing-subscriber = { workspace = true }