[package]
name = "raytracing-cpu"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = { workspace = true }
rand_pcg = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
image = { workspace = true }
num = { workspace = true }

embree4 = { workspace = true }
raytracing = { workspace = true }

png = "0.17.16"
exr = { workspace = true }
num_cpus = "1.17.0"
