[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj = "0.10.2"
image = "0.24.5"
anyhow = "1.0.70"
rand = "0.9.0"

[dependencies.embree4-sys]
path = "../embree4-sys"

[dependencies.gltf]
version = "1.1.0"
features = ["KHR_lights_punctual"]