[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.5"
anyhow = "1.0.70"
rand = "0.9.0"
tracing = "0.1.41"

[dependencies.embree4]
path = "../embree4"

[dependencies.gltf]
version = "1.1.0"
features = ["KHR_lights_punctual"]
