[package]
name = "raytracing"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
bytemuck = { version = "1.22.0", features = ["derive"] }

anyhow = { workspace = true }
rand = { workspace = true }
num = { workspace = true }
tracing = { workspace = true }

embree4 = { workspace = true }

[dependencies.gltf]
version = "1.1.0"
features = ["KHR_lights_punctual"]
