[package]
name = "viewer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.30.9"
wgpu = "24.0.1"
pollster = "0.4.0"

imgui = "0.12.0"
imgui-winit-support = "0.13.0"
imgui-wgpu = { git = "https://github.com/Yatekii/imgui-wgpu-rs.git", rev = "3df0df4a81b2fad87b702fbcb3a7ddb8e482f5de" }

bytemuck = { version = "1.22.0", features = ["derive"] }
encase = "0.11.1"

raytracing = { path = "../raytracing" }
raytracing-cpu = { path = "../raytracing-cpu" }