[project]
name = "rttest"
version = "0.1.0"
description = "Visual regression testing for the raytracer"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "openexr>=3.2",
    "matplotlib>=3.7",
]

[project.scripts]
rttest = "rttest.main:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"


